--- a/community/add_question.html
+++ b/community/add_question.html
@@ -35,113 +35,96 @@
     <button id="submitBtn">등록하기</button>
   </div>
 
-  <script>
-    $(document).ready(function () {
-      const token = localStorage.getItem('token');
-      const refreshToken = localStorage.getItem('refreshToken');
-      const nav = $('#nav-links');
-      const userNameDiv = $('#user-name');
-      const name = localStorage.getItem('name');
-      let isAdmin = false;
-
-      function renderNav(loggedIn) {
-        if (loggedIn) {
-          nav.html(`
-            <a href="/index.html">홈</a>
-            <a href="/problems/list.html">문제목록</a>
-            <a href="/community/community.html">커뮤니티</a>
-            <a href="#" id="logoutBtn">로그아웃</a>
-          `);
-          userNameDiv.text(name || '');
-          userNameDiv.show();
-        } else {
-          nav.html(`
-            <a href="/index.html">홈</a>
-            <a href="/problems/list.html">문제목록</a>
-            <a href="/community/community.html">커뮤니티</a>
-            <a href="/login/login.html">로그인</a>
-            <a href="/login/signUp.html">회원가입</a>
-          `);
-          userNameDiv.hide();
-        }
-      }
-
-      function checkAdmin(token, cb) {
-        $.ajax({
-          url: 'https://be.netlab.kr/api/auth/is-admin',
-          method: 'GET',
-          headers: { 'Authorization': 'Bearer ' + token },
-          success: function (res) {
-            isAdmin = res === true;
-            if (isAdmin) $('#postTypeGroup').show();
-            cb();
-          },
-          error: function () { cb(); }
-        });
-      }
-
-      if (token) checkAdmin(token, () => renderNav(true));
-      else renderNav(false);
-
-      $(document).on('click', '#logoutBtn', function () {
-        localStorage.clear();
-        alert('로그아웃 되었습니다');
-        location.href = '/index.html';
-      });
-
-      $('#submitBtn').click(function () {
-        const title = $('#title').val().trim();
-        const content = $('#content').val().trim();
-        const postType = $('input[name="postType"]:checked').val();
-
-        if (!title || !content) {
-          alert('제목과 내용을 모두 입력해주세요.');
-          return;
-        }
-
-        function registerQuestion(title, content, token, retry) {
-          const url = postType === 'notice'
-            ? 'https://be.netlab.kr/api/admin/notices'
-            : 'https://be.netlab.kr/api/questions';
-
-          $.ajax({
-            url: url,
-            method: 'POST',
-            contentType: 'application/json',
-            headers: token ? { 'Authorization': 'Bearer ' + token } : {},
-            data: JSON.stringify({ title, content }),
-            success: function () {
-              alert(postType === 'notice' ? '공지사항이 등록되었습니다!' : '질문이 등록되었습니다!');
-              window.location.href = '/community/community.html';
-            },
-            error: function (xhr) {
-              if (xhr.status === 401 && refreshToken && !retry) {
-                $.ajax({
-                  url: 'https://be.netlab.kr/api/auth/refresh',
-                  method: 'POST',
-                  contentType: 'application/json',
-                  data: JSON.stringify({ refreshToken }),
-                  success: function (res) {
-                    localStorage.setItem('token', res.accessToken);
-                    localStorage.setItem('refreshToken', res.refreshToken);
-                    registerQuestion(title, content, res.accessToken, true);
-                  },
-                  error: function () {
-                    localStorage.clear();
-                    alert('로그인 세션이 만료되었습니다. 다시 로그인해주세요.');
-                    window.location.href = "/login/login.html";
-                  }
-                });
-              } else {
-                alert('등록 실패: ' + (xhr.responseText || xhr.statusText));
-              }
-            }
-          });
-        }
-
-        registerQuestion(title, content, token, false);
-      });
-    });
-  </script>
+  
 </body>
+<script>
+  $(function () {
+    const token = localStorage.getItem('token');
+    const refreshToken = localStorage.getItem('refreshToken');
+    const nav = $('#nav-links');
+    const userNameDiv = $('#user-name');
+    const name = localStorage.getItem('name') || '';
+    let isAdmin = false;
+
+    function renderNav(loggedIn) {
+      nav.html(`
+        <a href="/index.html">홈</a>
+        <a href="/problems/list.html">문제목록</a>
+        <a href="/community/community.html">커뮤니티</a>
+        ${loggedIn ? '<a href="#" id="logoutBtn">로그아웃</a>' : '<a href="/login/login.html">로그인</a><a href="/login/signUp.html">회원가입</a>'}
+      `);
+      if (loggedIn) { userNameDiv.text(name).show(); } else { userNameDiv.hide(); }
+    }
+
+    function checkAdmin(tk, cb) {
+      $.ajax({
+        url: 'https://be.netlab.kr/api/auth/is-admin',
+        method: 'GET',
+        headers: { 'Authorization': 'Bearer ' + tk },
+        complete: function (xhr) {
+          isAdmin = (xhr.status === 200 && xhr.responseJSON === true);
+          if (isAdmin) $('#postTypeGroup').show();
+          cb && cb();
+        }
+      });
+    }
+
+    if (token) checkAdmin(token, () => renderNav(true));
+    else renderNav(false);
+
+    $(document).on('click', '#logoutBtn', function () {
+      localStorage.clear();
+      alert('로그아웃 되었습니다');
+      location.href = '/index.html';
+    });
+
+    $('#submitBtn').on('click', function () {
+      const title = $('#title').val().trim();
+      const content = $('#content').val().trim();
+      const postType = $('input[name="postType"]:checked').val();
+
+      if (!title || !content) { alert('제목과 내용을 모두 입력해주세요.'); return; }
+
+      const url = (postType === 'notice')
+        ? 'https://be.netlab.kr/api/admin/notices'
+        : 'https://be.netlab.kr/api/questions';
+
+      const send = (tk) => $.ajax({
+        url, method: 'POST',
+        contentType: 'application/json',
+        headers: tk ? { 'Authorization': 'Bearer ' + tk } : {},
+        data: JSON.stringify({ title, content }),
+        success: function () {
+          alert(postType === 'notice' ? '공지사항이 등록되었습니다!' : '질문이 등록되었습니다!');
+          location.href = '/community/community.html';
+        },
+        error: function (xhr) {
+          if (xhr.status === 401 && refreshToken) {
+            $.ajax({
+              url: 'https://be.netlab.kr/api/auth/refresh',
+              method: 'POST',
+              contentType: 'application/json',
+              data: JSON.stringify({ refreshToken }),
+              success: function (res) {
+                localStorage.setItem('token', res.accessToken);
+                localStorage.setItem('refreshToken', res.refreshToken);
+                send(res.accessToken);
+              },
+              error: function () {
+                localStorage.clear();
+                alert('세션 만료. 다시 로그인해주세요.');
+                location.href = '/login/login.html';
+              }
+            });
+          } else {
+            alert('등록 실패');
+          }
+        }
+      });
+
+      send(token);
+    });
+  });
+</script>
+
 </html>
